--- a/smartfarm_page/templates/kid_data_fileupload.html
+++ b/smartfarm_page/templates/kid_data_fileupload.html
@@ -78,13 +78,13 @@
     <div class="container ">
         <div style="float: center;">
             {% if not_pass %}
-            <h2 style="font-family: 'Jua', sans-serif;">잘못된 접근입니다. 돌아가기</h2>
-            <h4><a href="{% url 'kids_pattern1'%}" ><img src="{% static 'smartfarm_page/assets/img/return.png' %}" width="40" height="40" alt=""></a></h4>
+            <h1 style="font-family: 'Jua', sans-serif;">잘못된 접근입니다. 돌아가기</h1>
+            <h4><a href="{% url 'kids_pattern1'%}" ><img src="{% static 'smartfarm_page/assets/img/return.png' %}" width="100" height="100" alt=""></a></h4>
             <br><br><br>
             {% elif Succeeded %}
             <div style="float: center;">
                 <h1 style="font-family: 'Jua', sans-serif;">저장 성공</h1>
-                <h2 style="font-family: 'Jua', sans-serif;">영유아 페이지로 돌아가기<a href="{% url 'kids_pattern1'%}" ><img src="{% static 'smartfarm_page/assets/img/return.png' %}" width="40" height="40" alt=""></a></h2>
+                <h2 style="font-family: 'Jua', sans-serif;">영유아 페이지로 돌아가기<a href="{% url 'kids_pattern1'%}" ><img src="{% static 'smartfarm_page/assets/img/return.png' %}" width="100" height="100" alt=""></a></h2>
             </div>
             {% else %}
             <div class="row">
@@ -105,6 +105,7 @@
             </div>
             {% endif %}
             {% if file %}
+            <br><br><br><img src="{% static 'smartfarm_page/assets/img/down_.png' %}" width="120" height="120" alt="">
             <form action="{% url 'input_kid_data'%}" method="POST"><br><br><br>
                 {% csrf_token %}
                 <div name="yes" class="jb-text" style="padding: 20px 100px; font-family: 'Jua', sans-serif;">
