--- a/smartfarm_page/templates/result.html
+++ b/smartfarm_page/templates/result.html
@@ -46,7 +46,7 @@
 <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
-<body class="page" style="background-image: url({% static 'smartfarm_page/assets/img/kid_page.jpg' %})">
+<body class="page" style="background-image: url({% static 'smartfarm_page/assets/img/kids2.png' %})">
 <!-- Navigation
     ==========================================-->
 <nav id="top-menu" class="navbar navbar-default navbar-fixed-top">
@@ -82,7 +82,7 @@
 </style>
 <!-- banner Page
     ==========================================-->
-<div id="page-banner" style="background-image: url({% static 'smartfarm_page/assets/img/kid_page1.jpg' %});">
+<div id="page-banner" style="background-image: url({% static 'smartfarm_page/assets/img/kids1.png' %});">
   <div class="content  wow fdeInUp">
     <div class="container ">
         <div style="float: center;">
@@ -180,90 +180,90 @@
                     </div><br>
                     <div class="row mb-3"></div>
                 </form>
-                    {% endif %}
-                    {% if not_day %}
-                    <h3 >⚠️ 해당 날에는 데이터가 없습니다. 다시 확인해주세요. ⚠️</h3>
-                    <form action="{% url 'pick_date'%}" method="POST">
-                        {% csrf_token %}
-                        <div style="float: left; margin-right:padding:10px 0px; "><br><br>
+                {% endif %}
+                {% if not_day %}
+                <h3 >⚠️ 해당 날에는 데이터가 없습니다. 다시 확인해주세요. ⚠️</h3>
+                <form action="{% url 'pick_date'%}" method="POST">
+                    {% csrf_token %}
+                    <div style="float: left; margin-right:padding:10px 0px; "><br><br>
                         <label  style="font-size:15px; text-align:justify">1. 일별 : 날짜 선택 </label>
                         <input name="date_pick" type="date"  class="form-control"  min="2021-06-01" max="2022-02-18"  style="height:45px;width:120;font-size:15px; text-align:justify;" required>
-                        </div>
-                <div style="float: left; margin-right:20px; "><br><br><br><br>
-                    <button type="submit" class="btn btn-primary" style="border-top-left-radius:5px; border-bottom-left-radius:5px; border: 1px solid black; background-color: rgba(0,0,0,0); color: black; padding: 5px;">확인</button>
-                    <br><br>
-                </div><br><br><br><br><br><br><br>
-            </form>
-            {% endif %}
+                    </div>
+                    <div style="float: left; margin-right:20px; "><br><br><br><br>
+                        <button type="submit" class="btn btn-primary" style="border-top-left-radius:5px; border-bottom-left-radius:5px; border: 1px solid black; background-color: rgba(0,0,0,0); color: black; padding: 5px;">확인</button>
+                        <br><br>
+                    </div><br><br><br><br><br><br><br>
+                </form>
+                {% endif %}
                 {% if Active %}
                 <div class="flex-container"; style=" padding:0px 0px;">
-                        <div class="container px-xl-6 bg-center">
-                            <div class="col-sm-6">
-                                <div class="card shadow mb-4" style="border:0px;">
-                                    <div class="card-body">
-                                        <div class="chart-area">
-                                            <h2 style=" text-align: center;font-family: 'Jua', sans-serif ;"><img src="{% static 'smartfarm_page/assets/img/e4.png' %}" width="400" height="300" alt=""><br>활동량 : 다소 활동적</h2>
-                                        </div>
+                    <div class="container px-xl-6 bg-center">
+                        <div class="col-sm-6">
+                            <div class="card shadow mb-4" style="border:0px;">
+                                <div class="card-body">
+                                    <div class="chart-area">
+                                        <h2 style=" text-align: center;font-family: 'Jua', sans-serif ;"><img src="{% static 'smartfarm_page/assets/img/e4.png' %}" width="400" height="300" alt=""><br>활동량 : 다소 활동적</h2>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-sm-6" >
-                                <div class="card shadow mb-4"style="border:0px;">
-                                    <div class="card-body">
-                                        <div class="chart-area">
-                                            <h2 style="font-family: 'Jua', sans-serif;"><br><br><br>{{ name }}의 하루평균 심박수는 {{heartrate}}bp,<br> 하루 한시간평균 걸음수는 {{stepcount}}입니다.<br>비교적으로 {{ max_zsc }}에 활동량이 많으며 <br> {{ min_zsc }}에 활동량이 낮습니다. </h2>
-                                        </div>
+                        </div>
+                        <div class="col-sm-6" >
+                            <div class="card shadow mb-4"style="border:0px;">
+                                <div class="card-body">
+                                    <div class="chart-area">
+                                        <h2 style="font-family: 'Jua', sans-serif;font-weight:500;"><br><br><br>{{ name }}의 하루평균 심박수는 {{heartrate}}bp,<br> 하루 한시간평균 걸음수는 {{stepcount}}입니다.<br>비교적으로 {{ max_zsc }}에 활동량이 많으며 <br> {{ min_zsc }}에 활동량이 낮습니다. </h2>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+                </div>
                 {% elif inactive %}
                 <div class="flex-container"; style=" padding:0px 0px;">
-                        <div class="container px-xl-6 bg-center">
-                            <div class="col-sm-6">
-                                <div class="card shadow mb-4" style="border:0px;">
-                                    <div class="card-body">
-                                        <div class="chart-area">
-                                            <h2 style=" text-align: center;font-family: 'Jua', sans-serif ;"><img src="{% static 'smartfarm_page/assets/img/e2.png' %}" width="400" height="300" alt=""><br>활동량 : 다소 차분함</h2>
-                                        </div>
+                    <div class="container px-xl-6 bg-center">
+                        <div class="col-sm-6">
+                            <div class="card shadow mb-4" style="border:0px;">
+                                <div class="card-body">
+                                    <div class="chart-area">
+                                        <h2 style=" text-align: center;font-family: 'Jua', sans-serif ;"><img src="{% static 'smartfarm_page/assets/img/e2.png' %}" width="400" height="300" alt=""><br>활동량 : 다소 차분함</h2>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-sm-6" >
-                                <div class="card shadow mb-4"style="border:0px;">
-                                    <div class="card-body">
-                                        <div class="chart-area">
-                                            <h2 style="font-family: 'Jua', sans-serif;"><br><br><br>{{ name }}의 하루평균 심박수는 {{heartrate}}bp,<br> 하루 한시간평균 걸음수는 {{stepcount}}입니다.<br>비교적으로 {{ max_zsc }}에 활동량이 많으며 <br> {{ min_zsc }}에 활동량이 낮습니다. </h2>
-                                        </div>
+                        </div>
+                        <div class="col-sm-6" >
+                            <div class="card shadow mb-4"style="border:0px;">
+                                <div class="card-body">
+                                    <div class="chart-area">
+                                        <h2 style="font-family: 'Jua', sans-serif;font-weight:500;"><br><br><br>{{ name }}의 하루평균 심박수는 {{heartrate}}bp,<br> 하루 한시간평균 걸음수는 {{stepcount}}입니다.<br>비교적으로 {{ max_zsc }}에 활동량이 많으며 <br> {{ min_zsc }}에 활동량이 낮습니다. </h2>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+                </div>
                 {% elif normal %}
-                    <div class="flex-container"; style=" padding:0px 0px;">
-                        <div class="container px-xl-6 bg-center">
-                            <div class="col-sm-6">
-                                <div class="card shadow mb-4" style="border:0px;">
-                                    <div class="card-body">
-                                        <div class="chart-area">
-                                            <h2 style=" text-align: center;font-family: 'Jua', sans-serif ;"><img src="{% static 'smartfarm_page/assets/img/e3.png' %}" width="450" height="300" alt=""><br>활동량 : 평균</h2>
-                                        </div>
+                <div class="flex-container"; style=" padding:0px 0px;">
+                    <div class="container px-xl-6 bg-center">
+                        <div class="col-sm-6">
+                            <div class="card shadow mb-4" style="border:0px;">
+                                <div class="card-body">
+                                    <div class="chart-area">
+                                        <h2 style=" text-align: center;font-family: 'Jua', sans-serif ;"><img src="{% static 'smartfarm_page/assets/img/e3.png' %}" width="450" height="300" alt=""><br>활동량 : 평균</h2>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-sm-6" >
-                                <div class="card shadow mb-4"style="border:0px;">
-                                    <div class="card-body">
-                                        <div class="chart-area">
-                                            <h2 style="font-family: 'Jua', sans-serif;"><br><br><br>{{ name }}의 하루평균 심박수는 {{heartrate}}bp,<br> 하루 한시간평균 걸음수는 {{stepcount}}입니다.<br>비교적으로 {{ max_zsc }}에 활동량이 많으며 <br> {{ min_zsc }}에 활동량이 낮습니다. </h2>
-                                        </div>
+                        </div>
+                        <div class="col-sm-6" >
+                            <div class="card shadow mb-4"style="border:0px;">
+                                <div class="card-body">
+                                    <div class="chart-area">
+                                        <h2 style="font-family: 'Jua', sans-serif; font-weight:500;"><br><br><br>{{ name }}의 하루평균 심박수는 {{heartrate}}bp,<br> 하루 한시간평균 걸음수는 {{stepcount}}입니다.<br>비교적으로 {{ max_zsc }}에 활동량이 많으며 <br> {{ min_zsc }}에 활동량이 낮습니다. </h2>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+                </div>
                 {% endif %}
                 <div class="flex-container"; style=" padding:0px 0px;">
                     <div class="container px-xl-6 bg-center">
@@ -315,6 +315,52 @@
                                 <div class="card-body">
                                     <div class="chart-area">
                                         <canvas id="cal" width="1200" height="700"></canvas>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div><br><br>
+                <div class="flex-container"; style=" padding:0px 0px;">
+                    <div class="container px-xl-6 bg-light">
+                        <div class="col-sm-6">
+                            <div class="card shadow mb-4">
+                                <div class="card-body">
+                                    <div class="chart-area">
+                                        {% if sc_hr == 1 %}
+                                        <h2 style=" text-align: center;font-family: 'Jua', sans-serif ;"><img src="{% static 'smartfarm_page/assets/img/sc_hr_1.png' %}" width="460" height="350" alt="">
+                                        </h2>
+                                        {% elif sc_hr == 2 %}
+                                        <h2 style=" text-align: center;font-family: 'Jua', sans-serif ;"><img src="{% static 'smartfarm_page/assets/img/sc_hr_2.png' %}" width="460" height="350" alt="">
+                                        </h2>
+                                        {% elif sc_hr == 3 %}
+                                        <h2 style=" text-align: center;font-family: 'Jua', sans-serif ;"><img src="{% static 'smartfarm_page/assets/img/sc_hr_3.png' %}" width="460" height="350" alt="">
+                                        </h2>
+                                        {% elif sc_hr == 4 %}
+                                        <h2 style=" text-align: center;font-family: 'Jua', sans-serif ;"><img src="{% static 'smartfarm_page/assets/img/sc_hr_4.png' %}" width="460" height="350" alt="">
+                                        </h2>
+                                        {% endif %}
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6" >
+                            <div class="card shadow mb-4">
+                                <div class="card-body">
+                                    <div class="chart-area">
+                                        {% if cal_km == 1 %}
+                                        <h2 style=" text-align: center;font-family: 'Jua', sans-serif ;"><img src="{% static 'smartfarm_page/assets/img/cal_km_1.png' %}" width="460" height="350" alt="">
+                                        </h2>
+                                        {% elif cal_km == 2 %}
+                                        <h2 style=" text-align: center;font-family: 'Jua', sans-serif ;"><img src="{% static 'smartfarm_page/assets/img/cal_km_2.png' %}" width="460" height="350" alt="">
+                                        </h2>
+                                        {% elif cal_km == 3 %}
+                                        <h2 style=" text-align: center;font-family: 'Jua', sans-serif ;"><img src="{% static 'smartfarm_page/assets/img/cal_km_3.png' %}" width="460" height="350" alt="">
+                                        </h2>
+                                        {% elif cal_km == 4 %}
+                                        <h2 style=" text-align: center;font-family: 'Jua', sans-serif ;"><img src="{% static 'smartfarm_page/assets/img/cal_km_4.png' %}" width="460" height="350" alt="">
+                                        </h2>
+                                        {% endif %}
                                     </div>
                                 </div>
                             </div>
