Correction of errors for weekly data.

--- a/smartfarm_page/templates/result.html
+++ b/smartfarm_page/templates/result.html
@@ -202,7 +202,7 @@
                             <div class="card shadow mb-4" style="border:0px;">
                                 <div class="card-body">
                                     <div class="chart-area">
-                                        <h2 style=" text-align: center;font-family: 'Jua', sans-serif ;"><img src="{% static 'smartfarm_page/assets/img/e4.png' %}" width="400" height="300" alt=""><br>활동량 : 다소 활동적</h2>
+                                        <h2 style=" text-align: center;font-family: 'Jua', sans-serif ;"><img src="{% static 'smartfarm_page/assets/img/e4.png' %}" width="480" height="300" alt=""><br>활동량 : 다소 활동적</h2>
                                     </div>
                                 </div>
                             </div>
@@ -225,7 +225,7 @@
                             <div class="card shadow mb-4" style="border:0px;">
                                 <div class="card-body">
                                     <div class="chart-area">
-                                        <h2 style=" text-align: center;font-family: 'Jua', sans-serif ;"><img src="{% static 'smartfarm_page/assets/img/e2.png' %}" width="400" height="300" alt=""><br>활동량 : 다소 차분함</h2>
+                                        <h2 style=" text-align: center;font-family: 'Jua', sans-serif ;"><img src="{% static 'smartfarm_page/assets/img/e2.png' %}" width="480" height="300" alt=""><br>활동량 : 다소 차분함</h2>
                                     </div>
                                 </div>
                             </div>
@@ -248,7 +248,7 @@
                             <div class="card shadow mb-4" style="border:0px;">
                                 <div class="card-body">
                                     <div class="chart-area">
-                                        <h2 style=" text-align: center;font-family: 'Jua', sans-serif ;"><img src="{% static 'smartfarm_page/assets/img/e3.png' %}" width="450" height="300" alt=""><br>활동량 : 평균</h2>
+                                        <h2 style=" text-align: center;font-family: 'Jua', sans-serif ;"><img src="{% static 'smartfarm_page/assets/img/e3.png' %}" width="480" height="300" alt=""><br>활동량 : 평균</h2>
                                     </div>
                                 </div>
                             </div>
@@ -330,19 +330,19 @@
                                         {% if sc_hr == 1 %}
                                         <h2 style=" text-align: center;font-family: 'Jua', sans-serif ;"><img src="{% static 'smartfarm_page/assets/img/sc_hr_1.png' %}" width="460" height="350" alt="">
                                         </h2>
-                                        <h2 style="font-family: 'Jua', sans-serif;">심박수👆 걸음수 👆</h2>
+                                        <h2 style="font-family: 'Jua', sans-serif;">심박수 ⇧ &nbsp; 걸음수 ⇧</h2>
                                         {% elif sc_hr == 2 %}
                                         <h2 style=" text-align: center;font-family: 'Jua', sans-serif ;"><img src="{% static 'smartfarm_page/assets/img/sc_hr_2.png' %}" width="460" height="350" alt="">
                                         </h2>
-                                        <h2 style="font-family: 'Jua', sans-serif;">심박수👆 걸음수👇</h2>
+                                        <h2 style="font-family: 'Jua', sans-serif;">심박수 ⇧ &nbsp; 걸음수 ⇩</h2>
                                         {% elif sc_hr == 3 %}
                                         <h2 style=" text-align: center;font-family: 'Jua', sans-serif ;"><img src="{% static 'smartfarm_page/assets/img/sc_hr_3.png' %}" width="460" height="350" alt="">
                                         </h2>
-                                        <h2 style="font-family: 'Jua', sans-serif;">심박수👇 걸음수👇</h2>
+                                        <h2 style="font-family: 'Jua', sans-serif;">심박수 ⇩ &nbsp; 걸음수 ⇩</h2>
                                         {% elif sc_hr == 4 %}
                                         <h2 style=" text-align: center;font-family: 'Jua', sans-serif ;"><img src="{% static 'smartfarm_page/assets/img/sc_hr_4.png' %}" width="460" height="350" alt="">
                                         </h2>
-                                        <h2 style="font-family: 'Jua', sans-serif;">심박수👇 걸음수👆</h2>
+                                        <h2 style="font-family: 'Jua', sans-serif;">심박수 ⇩ &nbsp; 걸음수 ⇧</h2>
                                         {% endif %}
                                     </div>
                                 </div>
@@ -355,19 +355,19 @@
                                         {% if cal_km == 1 %}
                                         <h2 style=" text-align: center;font-family: 'Jua', sans-serif ;"><img src="{% static 'smartfarm_page/assets/img/cal_km_1.png' %}" width="460" height="350" alt="">
                                         </h2>
-                                        <h2 style="font-family: 'Jua', sans-serif;">칼로리👆 km👆</h2>
+                                        <h2 style="font-family: 'Jua', sans-serif;">칼로리 ⇧ &nbsp; km ⇧</h2>
                                         {% elif cal_km == 2 %}
                                         <h2 style=" text-align: center;font-family: 'Jua', sans-serif ;"><img src="{% static 'smartfarm_page/assets/img/cal_km_2.png' %}" width="460" height="350" alt="">
                                         </h2>
-                                        <h2 style="font-family: 'Jua', sans-serif;">칼로리👆 km👇</h2>
+                                        <h2 style="font-family: 'Jua', sans-serif;">칼로리 ⇧ &nbsp; km ⇩</h2>
                                         {% elif cal_km == 3 %}
                                         <h2 style=" text-align: center;font-family: 'Jua', sans-serif ;"><img src="{% static 'smartfarm_page/assets/img/cal_km_3.png' %}" width="460" height="350" alt="">
                                         </h2>
-                                        <h2 style="font-family: 'Jua', sans-serif;">칼로리👇 km👇</h2>
+                                        <h2 style="font-family: 'Jua', sans-serif;">칼로리 ⇩ &nbsp; km ⇩</h2>
                                         {% elif cal_km == 4 %}
                                         <h2 style=" text-align: center;font-family: 'Jua', sans-serif ;"><img src="{% static 'smartfarm_page/assets/img/cal_km_4.png' %}" width="460" height="350" alt="">
                                         </h2>
-                                        <h2 style="font-family: 'Jua', sans-serif;">칼로리👇 km👆</h2>
+                                        <h2 style="font-family: 'Jua', sans-serif;">칼로리 ⇩ &nbsp; km ⇧</h2>
                                         {% endif %}
                                     </div>
                                 </div>
@@ -383,7 +383,7 @@
         </div>
     </div>
 </div>
-<footer class="footer bg-light" style="background-image: url({% static 'smartfarm_page/assets/img/kid_3.jpg' %})">
+<footer class="footer bg-light" ">
     <div class="row mb-5"></div>
     <br><br><br>
     <div class="container">
