Class DB update.

--- a/smartfarm_page/templates/kids_pattern1.html
+++ b/smartfarm_page/templates/kids_pattern1.html
@@ -111,6 +111,7 @@
                             <option value="행복한아토반">아토반</option>
                             <option value="행복한마루반">마루반</option>
                             <option value="행복한누리반">누리반</option>
+                            <option value="행복한샛별반">샛별반</option>
                         <optgroup label="평택어린이집">
                             <option value="독수리반" >독수리반
                             <option value="다람쥐반">다람쥐반
