--- a/smartfarm_page/templates/kids_result.html
+++ b/smartfarm_page/templates/kids_result.html
@@ -196,7 +196,30 @@
                     </div><br><br><br><br><br><br><br>
                 </form>
                 {% endif %}
-                {% if Active %}
+                {% if Active == 5 %}
+                <div class="flex-container"; style=" padding:0px 0px;">
+                    <div class="container px-xl-6 bg-center">
+                        <div class="col-sm-6">
+                            <div class="card shadow mb-4" style="border:0px;">
+                                <div class="card-body">
+                                    <div class="chart-area">
+                                        <h2 style=" text-align: center;font-family: 'Jua', sans-serif ;"><img src="{% static 'smartfarm_page/assets/img/e5.png' %}" width="480" height="300" alt=""><br>활동량 : 활동적</h2>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6" >
+                            <div class="card shadow mb-4"style="border:0px;">
+                                <div class="card-body">
+                                    <div class="chart-area">
+                                        <h2 style="font-family: 'Jua', sans-serif;font-weight:500;"><br><br><br>{{ name }}의 하루평균 심박수는 {{heartrate}}bp,<br> 하루 한시간평균 걸음수는 {{stepcount}}입니다.<br>비교적으로 {{ max_zsc }}에 활동량이 많으며 <br> {{ min_zsc }}에 활동량이 낮습니다. </h2>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                {% elif Active == 4 %}
                 <div class="flex-container"; style=" padding:0px 0px;">
                     <div class="container px-xl-6 bg-center">
                         <div class="col-sm-6">
@@ -219,7 +242,7 @@
                         </div>
                     </div>
                 </div>
-                {% elif inactive %}
+                {% elif Active == 1 %}
                 <div class="flex-container"; style=" padding:0px 0px;">
                     <div class="container px-xl-6 bg-center">
                         <div class="col-sm-6">
@@ -242,7 +265,7 @@
                         </div>
                     </div>
                 </div>
-                {% elif normal %}
+                {% elif Active == 3 %}
                 <div class="flex-container"; style=" padding:0px 0px;">
                     <div class="container px-xl-6 bg-center">
                         <div class="col-sm-6">
