AICT webpage kids_pattern final (Acorrected the DB_name error)

--- a/smartfarm_page/templates/kids_result.html
+++ b/smartfarm_page/templates/kids_result.html
@@ -406,9 +406,12 @@
                 </div>
            {% endif %}
 {% endif %}
-                <br><br><br>
+
+                <br><br><br><br><br>
+                <!--download
                 <a href="/images/myw3schoolsimage.pdf" download="newfilename">Download the pdf &nbsp; <img src="{% static 'smartfarm_page/assets/img/down.png' %}" width="40" height="40" alt=""></a>
                 <br><br><br>
+                -->
             </center>
         </div>
     </div>
