--- a/smartfarm_page/templates/str_smartfarm1.html
+++ b/smartfarm_page/templates/str_smartfarm1.html
@@ -53,7 +53,7 @@
                                 <div class="d-inline-flex">
                                   <input type="float" placeholder="010" disabled  class="form-control form-control-sm w-30">
                                   &nbsp;&nbsp;<h5> - </h5>&nbsp;&nbsp;
-                                  <input type="float" class="form-control"  id="phone_number" name="phone_number" placeholder="12345678" required maxlength="8">&nbsp;&nbsp;
+                                  <input type="number" class="form-control"  id="phone_number" name="phone_number" placeholder="12345678" required maxlength="8">&nbsp;&nbsp;
                                   <div class="text-center"><input type="submit" class="btn btn-success" value="완료"></div>
                                 </div>
                             </div>
